# ExerciceTestFlask

./: pyproject.toml  readme.md
src/: application.py
src/business_logic/: mendeleev_management.py
src/exercice_test_flask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_get_element.py
